--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ author:
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           : "https://www.last.fm/user/gleet"
+  lastfm           : "gleet"
   linkedin         :
   orcid            : "https://orcid.org/0000-0003-2645-2569"
   pinterest        :
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "gleet_tweet"
   vine             :
   weibo            :
   xing             :
