--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,9 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Research"
+    url: /research/
+
+- title: "Publications"
     url: /publications/
 
   - title: "Talks"
