--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
 #  - title: "Portfolio"
 #    url: /portfolio/
 #        
-#  - title: "Blog Posts"
-#    url: /year-archive/
+  - title: "News"
+    url: /year-archive/
     
 #  - title: "CV"
 #    url: /cv/
